# multimodal-manipulation-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
diffusion_policy_soarm/: __init__.py  infer.py  train.py
diffusion_policy_soarm/configs/: base.yaml
diffusion_policy_soarm/configs/ablations/: bc_baseline.yaml  ddim_sampler.yaml  ddpm_sampler.yaml  high_res.yaml  long_chunk.yaml  short_chunk.yaml  transformer_backbone.yaml
diffusion_policy_soarm/data/: __init__.py  dataset.py  normalization.py  visualize_batch.py
diffusion_policy_soarm/docs/: bc_baseline_explained.ipynb  how_it_works.md  main_96x96_audit.ipynb  main_96x96_explained.ipynb  writeup.md
diffusion_policy_soarm/eval/: __init__.py  harness.py  metrics.py
diffusion_policy_soarm/models/: __init__.py  bc.py  cnn_backbone.py  diffusion.py  encoders.py  factory.py  transformer_backbone.py
diffusion_policy_soarm/models/diffusion/: __init__.py  module.py  samplers.py  schedule.py
diffusion_policy_soarm/scripts/: draw_architecture.py  overfit_check.py  preextract_frames.py
diffusion_policy_soarm/utils/: __init__.py  config.py  seed.py  training.py
lerobot_baseline/: README.md  infer.py  resize_dataset.py  train.sh
lerobot_baseline/configs/: diffusion.yaml
scripts/: diagnose_openloop.py
tests/: test_bc.py  test_diffusion.py
