[project]
name = "diffusion-policy-soarm"
version = "0.1.0"
description = "Diffusion Policy reimplementation for SO-ARM101 multimodal pick-and-place"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "numpy>=1.26.0",
    "lerobot>=0.3.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "av>=12.0.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
    "feetech-servo-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffusion_policy_soarm"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
